@@ -2,20 +2,26 @@ package edu.illinois.library.cantaloupe.resource.iiif.v2;
 
 import edu.illinois.library.cantaloupe.operation.Rotate;
 import edu.illinois.library.cantaloupe.operation.Transpose;
+import edu.illinois.library.cantaloupe.resource.IllegalClientArgumentException;
 import edu.illinois.library.cantaloupe.util.StringUtil;
 
 /**
- * Encapsulates the "rotation" component of an IIIF request URI.
+ * Encapsulates the "rotation" component of a URI.
  *
  * @see <a href="http://iiif.io/api/image/2.0/#rotation">IIIF Image API 2.0</a>
+ * @see <a href="http://iiif.io/api/image/2.1/#rotation">IIIF Image API 2.1</a>
  */
 class Rotation implements Comparable<Object> {
 
     private float degrees = 0f;
     private boolean mirror = false;
 
-    public static Rotation fromUri(String rotationUri)
-            throws IllegalArgumentException {
+    /**
+     * @param rotationUri Rotation URI component.
+     * @return Instance corresponding to the given argument.
+     * @throws IllegalClientArgumentException if the argument is invalid.
+     */
+    public static Rotation fromUri(String rotationUri) {
         Rotation rotation = new Rotation();
         try {
             if (rotationUri.startsWith("!")) {
@@ -26,7 +32,9 @@ class Rotation implements Comparable<Object> {
                 rotation.setDegrees(Float.parseFloat(rotationUri));
             }
         } catch (NumberFormatException e) {
-            throw new IllegalArgumentException("Invalid rotation");
+            throw new IllegalClientArgumentException("Invalid rotation");
+        } catch (IllegalArgumentException e) {
+            throw new IllegalClientArgumentException(e.getMessage(), e);
         }
         return rotation;
     }
@@ -34,9 +42,8 @@ class Rotation implements Comparable<Object> {
     @Override
     public int compareTo(Object object) {
         if (object instanceof Rotate) {
-            Rotate rotate =
-                    (Rotate) object;
-            if (this.getDegrees() == rotate.getDegrees()) {
+            Rotate rotate = (Rotate) object;
+            if (getDegrees() == rotate.getDegrees()) {
                 return 0;
             }
         } else if (object instanceof Transpose) {
@@ -46,8 +53,8 @@ class Rotation implements Comparable<Object> {
             }
         } else if (object instanceof Rotation) {
             Rotation rotation = (Rotation) object;
-            if (rotation.shouldMirror() == this.shouldMirror()) {
-                return new Float(this.getDegrees()).
+            if (rotation.shouldMirror() == shouldMirror()) {
+                return Float.valueOf(getDegrees()).
                         compareTo(rotation.getDegrees());
             }
         }
@@ -72,19 +79,19 @@ class Rotation implements Comparable<Object> {
     }
 
     /**
-     * @param degrees Degrees of rotation between 0 and 360
-     * @throws IllegalArgumentException
+     * @param degrees Degrees of rotation between 0 and 360.
+     * @throws IllegalClientArgumentException
      */
-    public void setDegrees(float degrees) throws IllegalArgumentException {
+    public void setDegrees(float degrees) {
         if (degrees < 0 || degrees > 360) {
-            throw new IllegalArgumentException("Degrees must be between 0 and 360");
+            throw new IllegalClientArgumentException(
+                    "Degrees must be greater than or equal to 0 and less than 360");
         }
         this.degrees = degrees;
     }
 
     /**
-     * @param mirror Whether the request should be mirrored before being
-     *               rotated.
+     * @param mirror Whether the image should be mirrored before being rotated.
      */
     public void setMirror(boolean mirror) {
         this.mirror = mirror;
@@ -108,7 +115,7 @@ class Rotation implements Comparable<Object> {
     }
 
     public Rotate toRotate() {
-        return new Rotate(this.getDegrees());
+        return new Rotate(getDegrees());
     }
 
     /**
@@ -116,10 +123,10 @@ class Rotation implements Comparable<Object> {
      */
     public String toString() {
         String str = "";
-        if (this.shouldMirror()) {
+        if (shouldMirror()) {
             str += "!";
         }
-        str += StringUtil.removeTrailingZeroes(this.getDegrees());
+        str += StringUtil.removeTrailingZeroes(getDegrees());
         return str;
     }
 
